[gd_scene load_steps=3 format=3 uid="uid://chg877he58hdh"]

[ext_resource type="Script" uid="uid://d08gdlqj02bom" path="res://src/ui/kitchen/kitchen_puzzle.gd" id="1_i8rvj"]
[ext_resource type="PackedScene" path="res://src/ui/kitchen/slide_puzzle_piece.tscn" id="2_f5xa7"]

[node name="KitchenPuzzle" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i8rvj")

[node name="Screen_Container" type="Control" parent="."]
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="ColorRect" type="ColorRect" parent="Screen_Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.2)

[node name="PuzzleContainer" type="Control" parent="Screen_Container"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Screen_Container/PuzzleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[node name="SlidePuzzlePiece" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_left = 40.0
offset_right = 80.0
offset_bottom = 40.0

[node name="SlidePuzzlePiece11" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SlidePuzzlePiece3" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 80.0

[node name="SlidePuzzlePiece4" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_left = 80.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 80.0

[node name="SlidePuzzlePiece5" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 120.0

[node name="SlidePuzzlePiece6" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 120.0

[node name="SlidePuzzlePiece7" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_left = 80.0
offset_top = 120.0
offset_right = 120.0
offset_bottom = 160.0

[node name="SlidePuzzlePiece8" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_top = 80.0
offset_right = 40.0
offset_bottom = 120.0

[node name="SlidePuzzlePiece9" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_top = 120.0
offset_right = 40.0
offset_bottom = 160.0

[node name="SlidePuzzlePiece10" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_left = 40.0
offset_top = 120.0
offset_right = 80.0
offset_bottom = 160.0

[node name="SlidePuzzlePiece2" parent="Screen_Container/PuzzleContainer" instance=ExtResource("2_f5xa7")]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 80.0
